issue #9 add page service and fixed card align content

--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -10,3 +10,8 @@
 .card-title {
     color: #9b4dca
 }
+
+.card-footer, .card-header {
+	background-color: transparent;
+	border: none;
+}
